# vsTetris

CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
